Simplify build configuration for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,33 +1,15 @@
 {
   "version": 2,
-  "buildCommand": "npm install react-app-rewired && npm run build",
   "builds": [
     {
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "build",
-        "installCommand": "npm install"
+        "distDir": "build"
       }
     }
   ],
   "routes": [
-    {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
-      "src": "/favicon.ico",
-      "dest": "/favicon.ico"
-    },
-    {
-      "src": "/manifest.json",
-      "dest": "/manifest.json"
-    },
-    {
-      "src": "/robots.txt",
-      "dest": "/robots.txt"
-    },
     {
       "src": "/(.*)",
       "dest": "/index.html"
