--- a/pul-backend/Dockerfile
+++ b/pul-backend/Dockerfile
@@ -1,6 +1,20 @@
 FROM eclipse-temurin:17-jdk-focal
 
 WORKDIR /app
+
+# Copy the Maven wrapper and pom.xml
+COPY .mvn .mvn
+COPY mvnw .
+COPY pom.xml .
+COPY src src
+
+# Make the Maven wrapper executable
+RUN chmod +x mvnw
+
+# Build the application
+RUN ./mvnw clean package -DskipTests
+
+# Copy the built JAR file
 COPY target/*.jar app.jar
 
 EXPOSE 8080
