--- a/pul-backend/Dockerfile
+++ b/pul-backend/Dockerfile
@@ -1,22 +1,24 @@
-# Use Java 17 as the base image
-FROM openjdk:17-slim
+# Use OpenJDK 17 as base image
+FROM eclipse-temurin:17-jdk-focal
 
 # Set working directory
 WORKDIR /app
 
-# Copy the Maven wrapper and pom.xml
-COPY mvnw .
-COPY .mvn .mvn
-COPY pom.xml .
+# Copy the Maven wrapper files
+COPY .mvn/ .mvn/
+COPY mvnw pom.xml ./
 
-# Make Maven wrapper executable
+# Make the Maven wrapper executable
 RUN chmod +x mvnw
 
-# Copy source code
-COPY src src
+# Copy the source code
+COPY src ./src
 
 # Build the application
 RUN ./mvnw clean package -DskipTests
+
+# Expose the port the app runs on
+EXPOSE 8080
 
 # Run the application
 CMD ["java", "-jar", "target/pulse-0.0.1-SNAPSHOT.jar"] 
