--- a/pul-backend/render.yaml
+++ b/pul-backend/render.yaml
@@ -1,11 +1,7 @@
 services:
   - type: web
     name: pulse-backend
-    env: java
-    buildCommand: ./render-build.sh
-    startCommand: java -jar target/pulse-0.0.1-SNAPSHOT.jar
+    env: docker
+    dockerfilePath: Dockerfile
     plan: free
-    branch: main
-    envVars:
-      - key: JAVA_VERSION
-        value: 17 
+    branch: main 
