Add explicit PostgreSQL dialect configuration

--- a/pul-backend/src/main/resources/application-prod.properties
+++ b/pul-backend/src/main/resources/application-prod.properties
@@ -11,6 +11,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # CORS Configuration
 spring.web.cors.allowed-origins=https://pulse-final-red.vercel.app
