--- a/pul-backend/src/main/resources/application-prod.properties
+++ b/pul-backend/src/main/resources/application-prod.properties
@@ -1,11 +1,17 @@
 # Server Configuration
 server.port=${PORT:8080}
+server.error.include-message=always
+server.error.include-binding-errors=always
 
 # Database Configuration
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.idle-timeout=300000
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
@@ -22,4 +28,7 @@ spring.web.cors.allow-credentials=true
 
 # Logging Configuration
 logging.level.root=INFO
-logging.level.com.teamf.pulse=INFO 
+logging.level.com.teamf.pulse=INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=INFO
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n 
