--- a/pul-backend/src/main/resources/application-prod.properties
+++ b/pul-backend/src/main/resources/application-prod.properties
@@ -4,7 +4,7 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 
 # Database Configuration
-spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.url=jdbc:postgresql://dpg-d039k6s9c44c73abbkp0-a/pulse_db_tjkj
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -15,8 +15,8 @@ spring.datasource.hikari.idle-timeout=300000
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
@@ -28,7 +28,9 @@ spring.web.cors.allow-credentials=true
 
 # Logging Configuration
 logging.level.root=INFO
-logging.level.com.teamf.pulse=INFO
+logging.level.com.teamf.pulse=DEBUG
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n 
